# alighieri

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSING.md  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  container.yml  release.yml
doc/: acme-tls-test.md  alighieri.conf  benchmarks.md  feature_todo.md  plugin-sdk.md  roadmap.md  socks5_proxy_concerns.md  windows-service-smoke-test.ps1  windows-service.md
doc/templates/: lan-username.conf  local-no-auth.conf
examples/: loadgen.rs
scripts/: alighieri.sh  install-linux.sh
src/: abuse.rs  acl.rs  auth.rs  client_stream.rs  config.rs  connection.rs  dns.rs  errors.rs  lib.rs  main.rs  metrics.rs  net.rs  plugin.rs  proxy_protocol.rs  relay.rs  runtime.rs  server.rs  socks5.rs  throttle.rs  tls.rs  util.rs  wizard.rs
src/platform/: mod.rs
src/platform/windows/: event_log.rs  mod.rs  service.rs  service_manager.rs
tests/: plugin_sdk.rs  socks5_connect.rs
