[package]
name = "alighieri"
version = "0.4.0"
edition = "2021"
# Raised from 1.85 for rustls-acme's cert-parsing chain: the RUSTSEC-2026-0009
# patched `time` (>=0.3.47) requires rustc 1.88.
rust-version = "1.88"
description = "Alighieri — a lightweight, secure, asynchronous SOCKS5 proxy server with Dante-inspired configuration"
repository = "https://github.com/wiresock/alighieri"
homepage = "https://github.com/wiresock/alighieri"
documentation = "https://docs.rs/alighieri"
publish = ["crates-io"]
# Open-source license. Alighieri is dual-licensed: a commercial license is also
# available for proprietary use — see LICENSING.md.
license = "AGPL-3.0-or-later"
keywords = ["socks5", "proxy", "network", "dante", "async"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
include = [
    "/src/**",
    "/tests/**",
    "/examples/**",
    "/scripts/alighieri.sh",
    "/scripts/install-linux.sh",
    "/doc/alighieri.conf",
    "/doc/acme-tls-test.md",
    "/doc/benchmarks.md",
    "/doc/plugin-sdk.md",
    "/doc/roadmap.md",
    "/doc/windows-service.md",
    "/doc/windows-service-smoke-test.ps1",
    "/doc/templates/**",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/LICENSING.md",
]

[package.metadata.docs.rs]
features = ["plugins"]

[[bin]]
name = "alighieri"
path = "src/main.rs"

[lib]
name = "alighieri"
path = "src/lib.rs"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
tokio = { version = "1", features = ["full"] }
# Borrowed access to the relay sockets to enlarge their kernel send/receive
# buffers for sustained high-rate UDP. Already in the tree via tokio.
socket2 = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
password-hash = { version = "0.5", features = ["rand_core"] }
rpassword = "7"
# PEM parsing for the TLS listener. The std feature provides the reader/file
# PEM helpers; this replaces the now-unmaintained rustls-pemfile crate.
rustls-pki-types = { version = "1", features = ["std"] }
# Pinned to the ring provider: aws-lc-rs (the rustls default) needs CMake and
# NASM to build on Windows, which this project's contributors cannot assume.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
# Automatic certificates (ACME / Let's Encrypt) for the TLS listener. Pinned to
# the ring provider for the same reason as tokio-rustls above.
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "tokio", "tls12", "webpki-roots"] }
# StreamExt to drive the rustls-acme certificate-renewal state.
tokio-stream = "0.1"
# Async methods on the object-safe `Plugin` / `StreamInterceptor` traits. Pulled
# in only by the `plugins` feature, so a stock build compiles none of it.
async-trait = { version = "0.1", optional = true }

[features]
default = []
# The plugin SDK (`alighieri::plugin`). Off by default: a stock build carries no
# plugin code, no extra dependencies, and no added attack surface.
plugins = ["dep:async-trait"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_EventLog", "Win32_System_IO", "Win32_System_Registry"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
